# SecLyzer

./: .env  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_OPTIMIZED.md  CHANGELOG.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  FIX_INPUT_PERMISSIONS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NEXT_AGENT_HANDOVER.md  PHASE3_REVIEW.md  PRIVACY.md  README.md  SECURITY.md  TRAINING_QUICKSTART.md  WARP.md  install.sh  requirements.txt  requirements_ml.txt
.warp-local/: 00_START_HERE.md  AGENT_CASCADE_CONTEXT.md  ALL_FOLDERS_VERIFICATION_COMPLETE.md  AUDIT_CORRECTIONS_SUMMARY.md  AUDIT_INDEX.md  AUDIT_REPORT_20251201.md  CODEBASE_AUDIT.md  COMPLETE_PROJECT_UPDATE.md  COMPLETION_STATUS.md  COMPREHENSIVE_TEST_INTEGRATION.md  CONTEXT_SNAPSHOT.md  DEEP_CODE_ANALYSIS.md  FINAL_AUDIT_SUMMARY.txt  FULL_SCRIPTS_UPDATE_COMPLETE.md  FUTURE_ROADMAP.md  INFLUXDB_DATA_ISSUE_DIAGNOSIS.md  INVENTORY.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PRODUCTION_READINESS_AUDIT.md  README.md  RUST_MIGRATION_COMPLETE.md  SCRIPTS_UPDATE_COMPLETE.md  SCRIPTS_VERIFICATION_COMPLETE.md  SPRINT_2WEEKS.md  TEST_SUITE_RUST_MIGRATION_FIX.md  verify_context.sh
admin (self)/: SecLyzerCred.txt
collectors/app_monitor/: Cargo.toml
collectors/app_monitor/src/: main.rs
common/: __init__.py  config.py  developer_mode.py  logger.py  paths.py  retry.py  validators.py  verify_password.sh
config/: config.yaml.example  dev_mode.yml  influx_token  seclyzer.yml
daemon/: seclyzer_daemon.py
scripts/: dev  (+12 more)
test_environment/extractors_rs/: Cargo.toml
test_environment/extractors_rs/app_tracker/: Cargo.toml
test_environment/extractors_rs/app_tracker/src/: lib.rs  main.rs  tracker.rs
test_environment/extractors_rs/common/: Cargo.toml
test_environment/extractors_rs/common/src/: config.rs  influx_client.rs  lib.rs  logger.rs  models.rs  redis_client.rs
test_environment/extractors_rs/keystroke_extractor/: Cargo.toml
test_environment/extractors_rs/keystroke_extractor/src/: extractor.rs  features.rs  lib.rs  main.rs
test_environment/extractors_rs/mouse_extractor/: Cargo.toml
test_environment/extractors_rs/mouse_extractor/src/: extractor.rs  features.rs  lib.rs  main.rs
(+66 files in other folders)
