[package]
name = "app_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
redis = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["all-extensions"] }
