[workspace]
members = [
    "common",
    "keystroke_extractor",
    "mouse_extractor",
    "app_tracker",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["SecLyzer Team"]
license = "MIT"

[workspace.dependencies]
redis = "0.24"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
