[package]
name = "mouse_extractor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "mouse_extractor"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
redis = { workspace = true, features = ["aio", "tokio-comp", "connection-manager"] }
